--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
 
 <body>
-    <h1>Hello, World!</h1>
+<h1>My name is Kuluthum Abubakar Lwaba. I was born and raised in Tanzania. I am 23 years. <br>
+I am from a family of four consisting of my father Abubakar, My mother Mwajuma, my sister Mariam and  my big brother Mohamed. <br>
+I completed my primary education in Philadelphia, my Ordinary level education in Ahmes secondary school, my A-level education in Turkish maarif school.<br>
+I began my college journey in the year 2022 and im still currently pursuing my degree as a second year student in bussiness in IT with Accounting.<br>
+With much enthusiam i am looking forward to complete this degree with much accomplishments through hard work and collaborations with more skilled people. 
+</h1>
 </body>
 
 </html>
